# elixir_backend

./: .env  .gitignore  README.md  README_PLC_Config.md  config.example.env  hyperbaric_sessions.db  main.py  pyproject.toml
api/: __init__.py  http_routes.py  routes.py  session_routes.py  shared.py  websocket_routes.py
config/: plc_addresses.json
core/: __init__.py  api_metadata.py  app_config.py  data_collector.py  database.py  logger.py  session_service.py
docs/: COMMUNICATION_ARCHITECTURE.md  README_PLC_Config.md  api_documentation.md  logging.md
examples/: logging_demo.py
modules/: plc.py  plc_config.py
plc/: plc.py  plc_config.py
tests/: test_plc.py
