[project]
name = "elixir-backend"
version = "0.1.0"
description = "Backend server for Elixir web app"
authors = [
    {name = "Archegon",email = "ng.ta.wei@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-snap7 (>=2.0.2,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry]
package-mode = false

